@@ -6,68 +6,113 @@
 
 <p>The current members of the WebKit Security group are:</p>
 
+<h3>Individual Members</h3>
 <ul>
-    <li>Aaron Sigel (Apple)
-    <li>Adam Barth (Individual Contributor)
-    <li>Adam Roben (Apple)
-    <li>Adele Peterson (Apple)
-    <li>Alex Legler (Gentoo)
-    <li>Alexey Proskuryakov (Individual Contributor)
-    <li>Alp Toker (GTK)
-    <li>Anders Carlsson (Apple)
-    <li>Antti Koivisto (Apple)
-    <li>Arno Gourdol (Adobe)
-    <li>Berend-Jan Wever (Google)
-    <li>Braden Thomas (Apple)
-    <li>Brady Eidson (Apple)
-    <li>Brian Hernacki (Palm)
-    <li>Cary Clark (Google)
-    <li>Chris Brichford (Adobe)
-    <li>Chris Evans (Google)
-    <li>Collin Jackson (Individual Contributor)
-    <li>Darin Adler (Apple)
-    <li>Darin Fisher (Google)
-    <li>David Carson (Apple)
-    <li>David Harrison (Apple)
-    <li>David Kilzer (Apple)
-    <li>David Remahl (Apple)
-    <li>Dean McNamee (Google)
-    <li>Drew Yao (Apple)
-    <li>Ed Rowe (Adobe)
-    <li>Eric Seidel (Google)
-    <li>Ethan Malasky (Adobe)
-    <li>Geoff Garen (Apple)
-    <li>Geoff Keating (Apple)
-    <li>Haitao Huang (Garmin)
-    <li>Ian Fette (Google)
-    <li>Ian Hickson (Google)
-    <li>Jamie Strandboge (Ubuntu)
-    <li>Jaroslav Reznik (Red Hat)
-    <li>Josh Bressers (Red Hat)
-    <li>Kees Cook (Ubuntu)
-    <li>Lars Knoll (Nokia/Qt Software)
-    <li>Lawrence Lai (Adobe)
-    <li>Maciej Stachowiak (Individual Contributor)
-    <li>Marc Deslauriers (Ubuntu)
-    <li>Mark Rowe (Apple)
-    <li>Matthew Murphy (Apple)
-    <li>Michal Zalewski (Google)
-    <li>Mihnea Ovidenie (Adobe)
-    <li>Oliver Hunt (Individual Contributor)
-    <li>Peleus Uhley (Adobe)
-    <li>Pierre-Yves Rofes (Gentoo)
-    <li>Rich Cannings (Google)
-    <li>Richard Williamson (Apple)
-    <li>Rob Christensen (Adobe)
-    <li>Robert Buchholz (Gentoo)
-    <li>Ron Dumont (Apple)
-    <li>Sam Weinig (Individual Contributor)
-    <li>Simon Hausmann (Nokia/Qt Software)
-    <li>Steve Falkenburg (Apple)
-    <li>Tim Hatcher (Apple)
-    <li>Tobias Heinlein (Gentoo)
-    <li>Tor Arne Vestbø (Nokia/Qt Software)
-    <li>Vincent Danen (Red Hat)
+    <li>Adam Barth
+    <li>Alexey Proskuryakov
+    <li>Collin Jackson
+    <li>Eric Seidel
+    <li>Ian Hickson
+    <li>Maciej Stachowiak
+    <li>Oliver Hunt
+    <li>Sam Weinig
+</ul>
+
+<h3>Vendor Contacts</h3>
+
+<ul>
+  <li>Apple
+    <ul>
+      <li>Adam Roben
+      <li>Adele Peterson
+      <li>Anders Carlsson
+      <li>Antti Koivisto
+      <li>Braden Thomas
+      <li>Brady Eidson
+      <li>Darin Adler
+      <li>David Carson
+      <li>David Harrison
+      <li>David Kilzer
+      <li>David Remahl
+      <li>Drew Yao
+      <li>Geoff Garen
+      <li>Geoff Keating
+      <li>Mark Rowe
+      <li>Matthew Murphy
+      <li>Richard Williamson
+      <li>Steve Falkenburg
+      <li>Tim Hatcher
+      <li>Ron Dumont
+    </ul>
+
+  <li>Adobe
+    <ul>
+      <li>Arno Gourdol
+      <li>Chris Brichford
+      <li>Ed Rowe
+      <li>Ethan Malasky
+      <li>Lawrence Lai
+      <li>Mihnea Ovidenie
+      <li>Peleus Uhley
+      <li>Rob Christensen
+    </ul>
+
+  <li>Garmin
+    <ul>
+      <li>Haitao Huang
+    </ul>
+
+  <li>Gentoo
+    <ul>
+      <li>Alex Legler
+      <li>Pierre-Yves Rofes
+      <li>Robert Buchholz
+      <li>Tobias Heinlein
+    </ul>
+
+  <li>Google
+    <ul>
+      <li>Berend-Jan Wever
+      <li>Cary Clark
+      <li>Chris Evans
+      <li>Darin Fisher
+      <li>Dean McNamee
+      <li>Ian Fette
+      <li>Michal Zalewski
+      <li>Rich Cannings
+    </ul>
+
+  <li>GTK
+    <ul>
+      <li>Alp Toker
+    </ul>
+
+  <li>Palm
+    <ul>
+      <li>Brian Hernacki
+    </ul>
+
+  <li>Nokia/Qt Software
+    <ul>
+      <li>Lars Knoll
+      <li>Simon Hausmann
+      <li>Tor Arne Vestbø
+    </ul>
+
+  <li>Red Hat
+    <ul>
+      <li>Jaroslav Reznik
+      <li>Josh Bressers
+      <li>Vincent Danen
+    </ul>
+
+  <li>Ubuntu
+    <ul>
+      <li>Jamie Strandboge
+      <li>Kees Cook
+      <li>Marc Deslauriers
+    </ul>
+
 </ul>
 <?php
     include("../footer.inc");
